[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,10 +4,25 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
+        <div class="container">
+            <div class="center">
+                <img id='madi' src="https://lh3.googleusercontent.com/KK9OfYMSTrj-GyXQAlstfi_hprTe5ddHOZmLEONPxGcLle-XJ7hg_hh1q7eSK-vzV_egsmIDWRXF7EP2W-fXmssTmPUvEkEtIciemAo_lbXmdjsxRYcU5vYcnaqqMoHkhnmzTjKifBQSb1NjNfzDdyC-hxlegRZG1GaPgvtWG5SKs0NTtpEaIaitZHnDcVr165Hp8Vd92LuOvGk21qt8w_t2sp55kHuQvLQNfepJU9NiIb_lWU7f4lzX--_yOzgQTKE8oNmHp2CSfvAioUwsG5SRcggEUf8LTOH3HHwJ0CYC3H-6UK7PAZG8wUCBqZAj9ZEK8owudSBhwENLYsKYWq_hufCc3MLNcNwV9OTkl0ZzUv2EDEENR8Ooa8uGR5x7q5iz4ij70KzvpoThSWl85f2RaQ5AGMLuI-erHXf6v8tFAuvHdLeESKLVoHi10B4iozYFDha3FBoCgOFJDdqtvoL6gCPrB9uS_kuJaBysIUa_hizHYjYclBzgRW4s19jQ4eGBEs2zADTCKyei-94jSrjyjZv2YVSuAIyvuDOGUwVuvF-H1qvG_SXa17usBeWglfQYWJlmh5DaISufl8Tt4f6lfTtUVYvpD5k4MygoAMrvyOiJ=w359-h638-no" class="img-medium"/>
+            </div>
+            </div>
+            <hr/>
+            <br>
+            <h3>Personal</h3>
+            <div>
+                Hi My name is Sandhya
+            </div>
+            <h3>Professional</h3>
+            <div>
+                I am a student at NITK.
+            </div>
+            <div class="footer">
+                
+            </div>
+        <!--
         <div id='main-text' class="center text-big bold">
             Hi! I am Sandhya and this is my first webapp.
         <h4>A new heading</h4>
@@ -15,7 +30,7 @@
 	</div>
 	<script>
 	 alert("Hi, I am javascript!");
-	</script>
+	</script>-->
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
