--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
                 I am a student at NITK.
             </div>
             <div class="footer">
-                
+                This button <button id="counter">Click me</button> has been clicked <span id="count">0</span> times.
             </div>
         <!--
         <div id='main-text' class="center text-big bold">
