--- a/ui/index.html
+++ b/ui/index.html
@@ -22,13 +22,12 @@
                 This button <button id="counter">Click me</button> has been clicked <span id="count">0</span> times.
             </div>
             <hr/>
-            <br/>
             <input type="text" id="name" placeholder="name"></input>
-            <input type="submit" value="Submit"></input>
-            <ul>
-                <li>name1</li>
+            <input type="submit" value="Submit" id="submit_btn"></input>
+            <ul id="nameList">
+               <!-- <li>name1</li>
                 <li>name2</li>
-                <li>name3</li>
+                <li>name3</li>-->
             </ul>
         <!--
         <div id='main-text' class="center text-big bold">
